--- a/package.json
+++ b/package.json
@@ -355,7 +355,7 @@
   "engines": {
     "node": "0.10 || 0.12 || 4 || 5"
   },
-  "version": "0.13.22",
+  "version": "0.13.22-base.1",
   "license": "MIT",
   "scripts": {
     "lint": "grunt lint",
